Rectified the Extra margin bug in the profile page

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -25,7 +25,10 @@
       -webkit-border-radius: 8px;
       -khtml-border-radius: 8px;
       border-radius: 8px;
-
+      
+      p{
+        margin:0;
+      }
       p,
       h1,
       h3,
